test/cases/compile_errors/non_pointer_given_to_ptrToInt.zig
export fn entry(x: i32) usize {
    return @ptrToInt(x);
}

// error
// backend=stage2
// target=native
//
// :2:22: error: expected pointer, found 'i32'
